--- a/react/Cryptocurrency project/project/src/styles.css
+++ b/react/Cryptocurrency project/project/src/styles.css
@@ -67,6 +67,10 @@ body {
   padding: 50px 200px 0px 200px;
 }
 
+.companyName {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 @media screen and (max-width: 1000px) {
   .form-register {
     padding: 50px 50px 0px 50px;
