--- a/react/Cryptocurrency project/project/src/App.css
+++ b/react/Cryptocurrency project/project/src/App.css
@@ -59,11 +59,12 @@
 
 .history-table{
   position: relative;
-  margin-left: 625px;
-  margin-top: 30px;
+  margin: 80px;
 }
 
-
+.list-group{
+  margin: 80px;
+}
 
 
 
