--- a/react/Cryptocurrency project/project/src/App.css
+++ b/react/Cryptocurrency project/project/src/App.css
@@ -32,101 +32,35 @@
 
 .container-buy{
   width: 100%;
-  height: 100%;
-  background-attachment: fixed;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: whitesmoke;
 }
 
 .buy-title{
-  position: relative;
-  top: 50px;
-  width: 430px;
-  height: 300px;
-  
   margin: 70px;
   text-align: center;
   background: whitesmoke;
 }
 
 .buy-field{
-  position: relative;
-  width: 580px;
-  height: 100px;
-
-  margin-top: -280px;
+  margin-top: -50px;
   text-align: center;
   background: whitesmoke;
 }
 
 .buy-click{
-  position: relative;
-  width: 580px;
-  height: 100px;
-
-  margin-top: -50px;;
-  text-align: center;
-  background: whitesmoke;
-}
-
-.container-sell{
-  width: 100%;
-  height: 100%;
-  background-attachment: fixed;
-  background: whitesmoke;
-}
-
-.sell-title{
-  position: relative;
-  width: 580px;
-  height: 100px;
-
-  margin-top: 0px;
-  text-align: center;
-  background: whitesmoke;
-}
-
-.sell-field{
-  position: relative;
-  width: 580px;
-  height: 100px;
-
-  margin-top: -50px;
-  text-align: center;
-  background: whitesmoke;
-}
-
-.sell-click{
-  position: relative;
-  width: 580px;
-  height: 100px;
-
-  margin-top: -50px;
+  margin-top: 20px;
   text-align: center;
   background: whitesmoke;
 }
 
 .history-table{
-  width: 100%;
-  height: 100%;
   position: relative;
-  margin-left: 1000px;
-  margin-top: -400px;  
-}
-
-.order-table{
-  width: 100%;
-  height: 100%;
-  position: relative;
-  margin-left: 800px;
-  margin-top: -300px;  
-}
-
-.sell-table{
-  width: 100%;
-  height: 100%;
-  position: relative;
-  margin-left: 600px;
-  margin-top: -30px;  
+  margin-left: 625px;
+  margin-top: 30px;
 }
 
 
