--- a/react/Cryptocurrency project/project/src/App.css
+++ b/react/Cryptocurrency project/project/src/App.css
@@ -125,12 +125,11 @@
   width: 100%;
   height: 100%;
   position: relative;
-  margin: 80px;
+  margin-left: 625px;
+  margin-top: 30px;
 }
 
-.list-group{
-  margin: 80px;
-}
+
 
 
 
