--- a/react/Cryptocurrency project/project/src/App.css
+++ b/react/Cryptocurrency project/project/src/App.css
@@ -132,16 +132,13 @@
 }
 
 .chart-dashboard {
-  position: relative;
-  margin-top: 20px;
-  padding: 60px 35px 35px 35px;
-  width: 500;
-  height: 320px;
+ width: 100%;
+ height: 100%;
 
-  border-radius: 20px;
-  background:  whitesmoke;
-  box-shadow: inset 13px 13px 20px #cbced1,
-              inset -13px -13px 20px #ffffff;
+  position: relative;
+  padding: 20px 25px 20px 20px;
+  width: 500px;
+  height: 500px;
 }
 
 .text-price {
