--- a/react/Cryptocurrency project/project/src/App.css
+++ b/react/Cryptocurrency project/project/src/App.css
@@ -28,18 +28,28 @@
   top: 50px;
   margin-left: auto;
   margin-right: auto;
-  padding: 60px 35px 35px 35px;
-  width: 430px;
-  height: 300px;
+  width: 100%;
+  height: 450px;
 
-  border-radius: 20px;
-  background:  whitesmoke;
-  box-shadow: inset 13px 13px 20px #cbced1,
-              inset -13px -13px 20px #ffffff;
+  border-radius: 15px;
+  background:  rgb(255, 255, 255);
+  
 }
 
 .form_buy{
-  margin: 100px 0px;
+  margin-top:100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+}
+
+.btn-confirm-order{
+  width: 100%;
+}
+
+.field_set{
+  border: 1px solid lightgray;
+  padding:20px;
 }
 
 .buy-title{
@@ -74,7 +84,10 @@
 }
 
 .form_sell{
-  margin: 100px 0px;
+  margin-top:100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
 }
 
 .sell-title{
@@ -108,10 +121,8 @@
 }
 
 .history-table{
-  width: 100%;
-  height: 100%;
+  margin-top: 10%;
   position: relative;
-  margin: 80px;
 }
 
 .order-table{
@@ -130,7 +141,7 @@
 }
 
 .list-group{
-  margin: 80px;
+
 }
 
 .dashboard_view{
